--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,7 +1,7 @@
 # This file describes an application. You can have multiple applications
 # in the same project.
 #
-# See https://docs.platform.sh/user_guide/reference/platform-app-yaml.html
+# See https://docs.platform.sh/configuration/app.html
 
 # The name of this app. Must be unique within a project.
 name: 'app'
@@ -9,132 +9,147 @@ name: 'app'
 # The runtime the application uses.
 type: 'php:8.1'
 
+dependencies:
+  php:
+    composer/composer: '^2'
+
+runtime:
+  # Enable the redis extension so Drupal can communicate with the Redis cache.
+  extensions:
+    - redis
+
 # The relationships of the application with services or other applications.
 #
 # The left-hand side is the name of the relationship as it will be exposed
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
 # side is in the form `<service name>:<endpoint name>`.
 relationships:
-    database: 'mysqldb:mysql'
+  database: 'mysqldb:mysql'
+  redis: 'cache:redis'
 
 # The size of the persistent disk of the application (in MB).
-disk: 3096
+disk: 3168
 
 # The 'mounts' describe writable, persistent filesystem mounts in the application.
 mounts:
-    '/docroot/sites/default/files':
-        source: local
-        source_path: 'files'
-    '/tmp':
-        source: local
-        source_path: 'tmp'
-    '/private':
-        source: local
-        source_path: 'private'
-    '/.drush':
-        source: local
-        source_path: 'drush'
-    '/drush-backups':
-        source: local
-        source_path: 'drush-backups'
-    '/.console':
-        source: local
-        source_path: 'console'
+  # The default Drupal files directory.
+  '/docroot/sites/default/files':
+    source: local
+    source_path: 'files'
+  # Drupal gets its own dedicated tmp directory. The settings.platformsh.php
+  # file will automatically configure Drupal to use this directory.
+  '/tmp':
+    source: local
+    source_path: 'tmp'
+  # Private file uploads are stored outside the web root. The settings.platformsh.php
+  # file will automatically configure Drupal to use this directory.
+  '/private':
+    source: local
+    source_path: 'private'
+  # Drush needs a scratch space for its own caches.
+  '/.drush':
+    source: local
+    source_path: 'drush'
+  # Drush will try to save backups to this directory, so it must be
+  # writeable even though you will almost never need to use it.
+  '/drush-backups':
+    source: local
+    source_path: 'drush-backups'
+  # Drupal Console will try to save backups to this directory, so it must be
+  # writeable even though you will almost never need to use it.
+  '/.console':
+    source: local
+    source_path: 'console'
 
 # Configuration of the build of this application.
 build:
-    flavor: composer
-
-dependencies:
-    php:
-        composer/composer: '^2'
-    ruby:
-        'wkhtmltopdf-binary': '0.12.5.4'
+  # Automatically run `composer install` on every build.
+  flavor: composer
 
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
-    # The build hook runs after Composer to finish preparing up your code.
-    build: |
-        set -e
-        curl -sS https://platform.sh/cli/installer | php
-        # This is needed because of the way the ruby gem works. The first time
-        # it runs, it unpacks the correct binary into your /app folder. And
-        # since we have a read-only files system by design, this can only be
-        # done in the build hook.
-        wkhtmltopdf -V
-    # The deploy hook runs after your application has been deployed and started.
-    deploy: |
-        set -e
-        cd docroot
-        drush -y cache:rebuild
-        drush -y updatedb
-        drush -y config:import
+  # The build hook runs after Composer to finish preparing up your code.
+  # No services are available but the disk is writeable.
+  build: |
+    set -e
+  # The deploy hook runs after your application has been deployed and started.
+  # Code cannot be modified at this point but the database is available.
+  # The site is not accepting requests while this script runs so keep it
+  # fast.
+  deploy: |
+    set -e
+    cd docroot
+    drush -y cache-rebuild
+    drush -y updatedb
+    drush -y config-import
+    drush -y cache-rebuild
+
 # The configuration of app when it is exposed to the web.
 web:
-    # Specific parameters for different URL prefixes.
-    locations:
-        '/':
-            # The folder from which to serve static assets, for this location.
-            #
-            # This is a filesystem path, relative to the application root.
-            root: 'docroot'
+  locations:
+    # All requests not otherwise specified follow these rules.
+    '/':
+      # The folder from which to serve static assets, for this location.
+      #
+      # This is a filesystem path, relative to the application root.
+      root: 'docroot'
 
-            # How long to allow static assets from this location to be cached.
-            #
-            # Can be a time in seconds, or -1 for no caching. Times can be
-            # suffixed with "s" (seconds), "m" (minutes), "h" (hours), "d"
-            # (days), "w" (weeks), "M" (months, as 30 days) or "y" (years, as
-            # 365 days).
-            expires: 1h
+      # How long to allow static assets from this location to be cached.
+      #
+      # Can be a time in seconds, or -1 for no caching. Times can be
+      # suffixed with "s" (seconds), "m" (minutes), "h" (hours), "d"
+      # (days), "w" (weeks), "M" (months, as 30 days) or "y" (years, as
+      # 365 days).
+      expires: 5m
 
-            # Whether to forward disallowed and missing resources from this
-            # location to the application.
-            #
-            # Can be true, false or a URI path string.
-            passthru: '/index.php'
+      # Redirect any incoming request to Drupal's front controller.
+      passthru: '/index.php'
 
-            # Deny access to static files in this location.
-            allow: false
+      # Deny access to all static files, except those specifically allowed below.
+      allow: false
 
-            # Rules for specific URI patterns.
-            rules:
-                # Allow access to common static files.
-                '\.(jpe?g|png|gif|mp4|svgz?|css|js|map|ico|bmp|eot|woff2?|otf|ttf)$':
-                    allow: true
-                    expires: 1w
-                '^/robots\.txt$':
-                    allow: true
-                '^/sitemap\.xml$':
-                    allow: true
+      # Rules for specific URI patterns.
+      rules:
+        # Allow access to common static files.
+        '\.(jpe?g|png|gif|svgz?|css|js|map|ico|bmp|eot|woff2?|otf|ttf)$':
+          allow: true
+        '^/robots\.txt$':
+          allow: true
+        '^/sitemap\.xml$':
+          allow: true
 
-                # Deny direct access to configuration files.
-                '^/sites/sites\.php$':
-                    scripts: false
-                '^/sites/[^/]+/settings.*?\.php$':
-                    scripts: false
+        # Deny direct access to configuration files.
+        '^/sites/sites\.php$':
+          scripts: false
+        '^/sites/[^/]+/settings.*?\.php$':
+          scripts: false
+        '^/google16b765492fe15a04\.html$':
+          allow: true
+        '^/baidu_verify_Uc60IdPqvM\.html$':
+          allow: true
+    # The files directory has its own special configuration rules.
+    '/sites/default/files':
+      # Allow access to all files in the public files directory.
+      allow: true
+      expires: 5m
+      passthru: '/index.php'
+      root: 'docroot/sites/default/files'
 
-        '/sites/default/files':
-            # Allow access to all files in the public files directory.
-            allow: true
-            expires: 1w
-            passthru: '/index.php'
-            root: 'docroot/sites/default/files'
+      # Do not execute PHP scripts from the writeable mount.
+      scripts: false
 
-            # Do not execute PHP scripts.
-            scripts: false
-
-            rules:
-                # Provide a longer TTL (2 weeks) for aggregated CSS and JS files.
-                '^/sites/default/files/(css|js)':
-                    expires: 2w
-
-# The configuration of scheduled execution.
+      rules:
+        # Provide a longer TTL (2 weeks) for aggregated CSS and JS files.
+        '^/sites/default/files/(css|js)':
+          expires: 2w
 crons:
-    drupal:
-        spec: '*/20 * * * *'
-        cmd: 'cd docroot ; drush core:cron'
+  # Run Drupal's cron tasks every 15 minutes.
+  drupal:
+    spec: '*/15 * * * *'
+    cmd: 'cd docroot ; drush core:cron'
 
-# Set PHP memory limit.
 variables:
   php:
-    memory_limit: "256M"
+    memory_limit: 256M
+    post_max_size: 100M
+    upload_max_filesize: 100M
