--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -3,13 +3,15 @@
 # Each route describes how an incoming URL is going
 # to be processed by Platform.sh.
 
-"https://www.{default}/":
+"https://{default}/":
   type: upstream
-  upstream: "app:http"
+  upstream: "drupal:http"
   cache:
     enabled: true
-    cookies: ['*']
 
-"https://{default}/":
+    # Base the cache on the session cookie and custom Drupal cookies. Ignore all other cookies.
+    cookies: ['/^SS?ESS/', '/^Drupal.visitor/']
+
+"https://www.{default}/":
   type: redirect
-  to: "https://www.{default}/"
+  to: "https://{default}/"
