--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "drupal/layout_builder_restrictions": "^2.12",
         "drupal/menu_item_extras": "^2.16",
         "drupal/price_difference_formatter": "^1.2",
-        "drush/drush": "^11.0"
+        "drush/drush": "^11.0",
+        "platformsh/config-reader": "^2.4"
     },
     "repositories": [
         {
