--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -77,10 +77,10 @@ module:
   user: 0
   views_ui: 0
   views: 10
-  standard: 1000
+  minimal: 1000
 theme:
   bartik: 0
   seven: 0
   claro: 0
   olivero: 0
-profile: standard
+profile: minimal
