--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -48,6 +48,12 @@ module:
   image: 0
   inline_entity_form: 0
   language: 0
+  layout_builder: 0
+  layout_builder_browser: 0
+  layout_builder_modal: 0
+  layout_builder_restrictions: 0
+  layout_builder_restrictions_by_region: 0
+  layout_discovery: 0
   link: 0
   media: 0
   media_library: 0
