Updated "site-install" script and README.md

--- a/composer.json
+++ b/composer.json
@@ -65,9 +65,7 @@
         ],
         "site-install": [
             "composer install",
-            "drush si -y",
-            "drush config-set \"system.site\" uuid 902d1300-7276-46f1-8608-7fc30b57e39a -y",
-            "drush entity:delete shortcut_set",
+            "drush si --existing-config -y",
             "drush cr",
             "drush cim -y",
             "drush cr",
