--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "mglaman/phpstan-drupal": "^0.12",
         "phpstan/phpstan-deprecation-rules": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
+        "phpunit/phpunit": "^9.5",
         "symfony/phpunit-bridge": "^5.1.4"
     },
     "require": {
