--- a/.platform/services.yaml
+++ b/.platform/services.yaml
@@ -9,3 +9,13 @@ mysqldb:
 
 cache:
   type: redis:6.0
+
+searchsolr:
+  type: solr:8.6
+  disk: 1024
+  configuration:
+    cores:
+      maincore: {}
+    endpoints:
+      main:
+        core: maincore
