--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -71,6 +71,8 @@ module:
   quickedit: 0
   rdf: 0
   search: 0
+  search_api: 0
+  search_api_solr: 0
   serialization: 0
   shortcut: 0
   state_machine: 0
