Added conf_dir for Solr

--- a/.platform/services.yaml
+++ b/.platform/services.yaml
@@ -15,7 +15,8 @@ searchsolr:
   disk: 1024
   configuration:
     cores:
-      maincore: {}
+      maincore:
+        conf_dir: !archive "solr_8.x_config/"
     endpoints:
       main:
         core: maincore
