--- a/config/default/search_api.index.products.yml
+++ b/config/default/search_api.index.products.yml
@@ -1,11 +1,13 @@
 uuid: aae53381-5210-4a24-a994-4427f0f81931
 langcode: en
-status: false
+status: true
 dependencies:
+  config:
+    - search_api.server.solr_server
   module:
     - search_api_solr
-    - search_api
     - commerce_product
+    - search_api
 third_party_settings:
   search_api_solr:
     finalize: false
@@ -52,7 +54,23 @@ id: products
 name: Products
 description: ''
 read_only: false
-field_settings: {  }
+field_settings:
+  status:
+    label: Published
+    datasource_id: 'entity:commerce_product'
+    property_path: status
+    type: boolean
+    dependencies:
+      module:
+        - commerce_product
+  title:
+    label: 'Title for search'
+    datasource_id: 'entity:commerce_product'
+    property_path: title
+    type: text
+    dependencies:
+      module:
+        - commerce_product
 datasource_settings:
   'entity:commerce_product':
     bundles:
@@ -76,4 +94,4 @@ options:
   cron_limit: 50
   index_directly: true
   track_changes_in_references: true
-server: ''
+server: solr_server
