--- a/config/default/system.site.yml
+++ b/config/default/system.site.yml
@@ -8,7 +8,7 @@ slogan: Commerce
 page:
   403: ''
   404: ''
-  front: /products
+  front: /products-solr
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
