--- a/config/default/block.block.solr_search_form_narrow.yml
+++ b/config/default/block.block.solr_search_form_narrow.yml
@@ -17,7 +17,7 @@ plugin: 'views_exposed_filter_block:products_solr-page_1'
 settings:
   id: 'views_exposed_filter_block:products_solr-page_1'
   label: ''
-  label_display: visible
+  label_display: '0'
   provider: views
   views_label: ''
 visibility: {  }
