--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -29,9 +29,10 @@ runtime:
 relationships:
   database: 'mysqldb:mysql'
   redis: 'cache:redis'
+  solrsearch: 'searchsolr:main'
 
 # The size of the persistent disk of the application (in MB).
-disk: 4096
+disk: 3072
 
 # The 'mounts' describe writable, persistent filesystem mounts in the application.
 mounts:
