--- a/config/default/block.block.olivero_search_form_narrow.yml
+++ b/config/default/block.block.olivero_search_form_narrow.yml
@@ -1,6 +1,6 @@
 uuid: 7131d8de-ddaf-4566-a19c-486b0a6d78ff
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search
@@ -11,7 +11,7 @@ _core:
 id: olivero_search_form_narrow
 theme: olivero
 region: primary_menu
-weight: -6
+weight: -5
 provider: null
 plugin: search_form_block
 settings:
