--- a/config/default/block.block.olivero_search_form_wide.yml
+++ b/config/default/block.block.olivero_search_form_wide.yml
@@ -1,6 +1,6 @@
 uuid: 0313d33d-4789-406d-811e-9bd7421d7b66
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search
@@ -11,7 +11,7 @@ _core:
 id: olivero_search_form_wide
 theme: olivero
 region: secondary_menu
-weight: -7
+weight: -6
 provider: null
 plugin: search_form_block
 settings:
