--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "drupal/stage_file_proxy": "^1.0@beta",
         "lemberg/draft-environment": "^3.5.0",
         "mglaman/phpstan-drupal": "^0.12",
+        "phpspec/prophecy-phpunit": "^2",
         "phpstan/phpstan-deprecation-rules": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
         "phpunit/phpunit": "^9.5",
