--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "drupal/stage_file_proxy": "^1.0@beta",
         "lemberg/draft-environment": "^3.5.0",
         "mglaman/phpstan-drupal": "^0.12",
+        "phpspec/prophecy-phpunit": "^2",
         "phpstan/phpstan-deprecation-rules": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
         "phpunit/phpunit": "^9.5",
@@ -27,9 +28,11 @@
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-project-message": "^9.4",
         "drupal/core-recommended": "^9.4",
+        "drupal/fences": "^3.0",
         "drupal/field_group": "^3.2",
         "drupal/gin": "^3.0@beta",
         "drupal/gin_toolbar": "^1.0@beta",
+        "drupal/jquery_ui_accordion": "^1.1",
         "drupal/layout_builder_browser": "^1.4",
         "drupal/layout_builder_modal": "^1.1",
         "drupal/layout_builder_restrictions": "^2.12",
