--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -30,6 +30,8 @@ relationships:
   database: 'mysqldb:mysql'
   redis: 'cache:redis'
   solrsearch: 'searchsolr:main'
+  elasticsearch: 'elasticsearch:elasticsearch'
+
 
 # The size of the persistent disk of the application (in MB).
 disk: 3072
