Installed and configured modules for SEO

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
         "composer/installers": "^2.1",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.0",
+        "drupal/advagg": "^5.0",
+        "drupal/checklistapi": "^2.1",
+        "drupal/coffee": "^1.2",
         "drupal/commerce": "^2.21",
         "drupal/commerce_paypal": "^1.0@RC",
         "drupal/commerce_pricelist": "^2.1",
@@ -28,17 +31,29 @@
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-project-message": "^9.4",
         "drupal/core-recommended": "^9.4",
+        "drupal/devel": "^5.0",
         "drupal/fences": "^3.0",
         "drupal/field_group": "^3.2",
         "drupal/gin": "^3.0@beta",
         "drupal/gin_toolbar": "^1.0@beta",
+        "drupal/google_analytics": "^4.0",
+        "drupal/hreflang": "^1.9",
         "drupal/jquery_ui_accordion": "^1.1",
         "drupal/layout_builder_browser": "^1.4",
         "drupal/layout_builder_modal": "^1.1",
         "drupal/layout_builder_restrictions": "^2.12",
         "drupal/menu_item_extras": "^2.16",
+        "drupal/metatag": "^1.22",
+        "drupal/module_filter": "^3.2",
+        "drupal/pathauto": "^1.11",
         "drupal/price_difference_formatter": "^1.2",
+        "drupal/redirect": "^1.8",
+        "drupal/robotstxt": "^1.4",
         "drupal/search_api_solr": "^4.2",
+        "drupal/seo_checklist": "^5.1",
+        "drupal/simple_sitemap": "^4.1",
+        "drupal/xmlsitemap": "^1.4",
+        "drupal/yoast_seo": "^1.7",
         "drush/drush": "^11.0",
         "platformsh/config-reader": "^2.4"
     },
