--- a/config/default/core.entity_form_display.node.component_page.default.yml
+++ b/config/default/core.entity_form_display.node.component_page.default.yml
@@ -4,11 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.component_page.body
+    - field.field.node.component_page.field_meta_tags
+    - field.field.node.component_page.field_yoast_seo
     - field.field.node.component_page.layout_builder__layout
     - node.type.component_page
   module:
+    - metatag
     - path
     - text
+    - yoast_seo
 id: node.component_page.default
 targetEntityType: node
 bundle: component_page
@@ -30,6 +34,21 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_meta_tags:
+    type: metatag_firehose
+    weight: 131
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
+    third_party_settings: {  }
+  field_yoast_seo:
+    type: yoast_seo_widget
+    weight: 132
+    region: content
+    settings:
+      body: body
+    third_party_settings: {  }
   langcode:
     type: language_select
     weight: 2
@@ -49,6 +68,16 @@ content:
     region: content
     settings:
       display_label: true
+    third_party_settings: {  }
+  simple_sitemap:
+    weight: 10
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  simple_sitemap_index_now:
+    weight: 130
+    region: content
+    settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
@@ -81,6 +110,11 @@ content:
       match_limit: 10
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  url_redirects:
+    weight: 50
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden:
   layout_builder__layout: true
