--- a/config/default/core.entity_view_display.commerce_product.default.image.yml
+++ b/config/default/core.entity_view_display.commerce_product.default.image.yml
@@ -7,6 +7,7 @@ dependencies:
     - core.entity_view_mode.commerce_product.image
     - field.field.commerce_product.default.body
     - field.field.commerce_product.default.field_image
+    - field.field.commerce_product.default.field_metatags
     - image.style.thumbnail
   module:
     - media
@@ -29,7 +30,9 @@ content:
 hidden:
   body: true
   created: true
+  field_metatags: true
   langcode: true
+  search_api_excerpt: true
   stores: true
   title: true
   uid: true
