--- a/config/default/core.entity_view_display.node.article.default.yml
+++ b/config/default/core.entity_view_display.node.article.default.yml
@@ -7,12 +7,15 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_image
+    - field.field.node.article.field_meta_tags
     - field.field.node.article.field_tags
+    - field.field.node.article.field_yoast_seo
     - image.style.large
     - node.type.article
   module:
     - comment
     - image
+    - metatag
     - text
     - user
 _core:
@@ -49,6 +52,13 @@ content:
     third_party_settings: {  }
     weight: -1
     region: content
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 111
+    region: content
   field_tags:
     type: entity_reference_label
     label: above
@@ -57,6 +67,14 @@ content:
     third_party_settings: {  }
     weight: 10
     region: content
+  field_yoast_seo:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 112
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
@@ -64,3 +82,4 @@ content:
     region: content
 hidden:
   langcode: true
+  search_api_excerpt: true
