--- a/config/default/core.entity_view_display.node.article.rss.yml
+++ b/config/default/core.entity_view_display.node.article.rss.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_image
+    - field.field.node.article.field_meta_tags
     - field.field.node.article.field_tags
+    - field.field.node.article.field_yoast_seo
     - node.type.article
   module:
     - user
@@ -25,5 +27,8 @@ hidden:
   body: true
   comment: true
   field_image: true
+  field_meta_tags: true
   field_tags: true
+  field_yoast_seo: true
   langcode: true
+  search_api_excerpt: true
