--- a/config/default/core.entity_view_display.node.article.teaser.yml
+++ b/config/default/core.entity_view_display.node.article.teaser.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_image
+    - field.field.node.article.field_meta_tags
     - field.field.node.article.field_tags
+    - field.field.node.article.field_yoast_seo
     - image.style.medium
     - node.type.article
   module:
@@ -53,5 +55,8 @@ content:
     region: content
 hidden:
   comment: true
+  field_meta_tags: true
   field_tags: true
+  field_yoast_seo: true
   langcode: true
+  search_api_excerpt: true
