--- a/config/default/core.entity_view_display.node.component_page.default.yml
+++ b/config/default/core.entity_view_display.node.component_page.default.yml
@@ -4,12 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.component_page.body
+    - field.field.node.component_page.field_meta_tags
+    - field.field.node.component_page.field_yoast_seo
     - field.field.node.component_page.layout_builder__layout
     - node.type.component_page
   module:
     - layout_builder
     - layout_builder_restrictions
     - layout_discovery
+    - metatag
     - text
     - user
 third_party_settings:
@@ -21,7 +24,38 @@ third_party_settings:
         layout_id: layout_onecol
         layout_settings:
           label: ''
-        components: {  }
+        components:
+          9bc82782-4821-4021-a31a-5904936911b4:
+            uuid: 9bc82782-4821-4021-a31a-5904936911b4
+            region: content
+            configuration:
+              id: 'field_block:node:component_page:field_meta_tags'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              formatter:
+                type: metatag_empty_formatter
+                label: above
+                settings: {  }
+                third_party_settings: {  }
+            weight: 0
+            additional: {  }
+          c6eacc93-e953-4187-ac03-de1e357b97a9:
+            uuid: c6eacc93-e953-4187-ac03-de1e357b97a9
+            region: content
+            configuration:
+              id: 'field_block:node:component_page:field_yoast_seo'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              formatter:
+                type: string
+                label: above
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+            weight: 1
+            additional: {  }
         third_party_settings: {  }
   layout_builder_restrictions:
     allowed_block_categories: {  }
@@ -44,6 +78,21 @@ content:
     third_party_settings: {  }
     weight: 101
     region: content
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 102
+    region: content
+  field_yoast_seo:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 103
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
@@ -52,3 +101,4 @@ content:
 hidden:
   langcode: true
   layout_builder__layout: true
+  search_api_excerpt: true
