--- a/config/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/default/core.entity_view_display.node.page.teaser.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
+    - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_yoast_seo
     - node.type.page
   module:
     - text
@@ -28,4 +30,7 @@ content:
     weight: 101
     region: content
 hidden:
+  field_meta_tags: true
+  field_yoast_seo: true
   langcode: true
+  search_api_excerpt: true
