--- a/config/default/search_api.index.products.yml
+++ b/config/default/search_api.index.products.yml
@@ -50,6 +50,7 @@ third_party_settings:
     multilingual:
       limit_to_content_language: false
       include_language_independent: true
+      specific_languages: {  }
 id: products
 name: Products
 description: ''
