--- a/config/default/views.view.content.yml
+++ b/config/default/views.view.content.yml
@@ -2,9 +2,12 @@ uuid: a6557fcb-3bfc-4f3c-a955-9670f9794d75
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.node.field_yoast_seo
   module:
     - node
     - user
+    - yoast_seo
 _core:
   default_config_hash: P7F4DFe8BL31DRVqsvS-ix9KZZqvvaPjZ7zEvGo9yNM
 id: content
@@ -237,6 +240,12 @@ display:
           empty_zero: false
           hide_alter_empty: true
           destination: true
+        field_yoast_seo:
+          id: field_yoast_seo
+          table: node__field_yoast_seo
+          field: field_yoast_seo
+          plugin_id: field
+          type: yoastseo_formatter
       pager:
         type: full
         options:
@@ -582,7 +591,8 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_yoast_seo'
   page_1:
     id: page_1
     display_title: Page
@@ -614,4 +624,5 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_yoast_seo'
