Created configs for Elasticsearch (#86)
* Created configs for Elasticsearch

* Added Document Preview for testing

* Added Document Preview for testing

* Added Document Preview for testing

* Removed "document_preview"

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -30,9 +30,11 @@ relationships:
   database: 'mysqldb:mysql'
   redis: 'cache:redis'
   solrsearch: 'searchsolr:main'
+  elasticsearch: 'elasticsearch:elasticsearch'
+
 
 # The size of the persistent disk of the application (in MB).
-disk: 3072
+disk: 2048
 
 # The 'mounts' describe writable, persistent filesystem mounts in the application.
 mounts:
