--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-project-message": "^9.4",
         "drupal/core-recommended": "^9.4",
+        "drupal/elasticsearch_connector": "^7.0@alpha",
         "drupal/fences": "^3.0",
         "drupal/field_group": "^3.2",
         "drupal/gin": "^3.0@beta",
@@ -48,6 +49,7 @@
         "drupal/price_difference_formatter": "^1.2",
         "drupal/redirect": "^1.8",
         "drupal/robotstxt": "^1.4",
+        "drupal/search_api": "^1.26",
         "drupal/search_api_solr": "^4.2",
         "drupal/seo_checklist": "^5.1",
         "drupal/simple_sitemap": "^4.1",
