--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -45,6 +45,7 @@ module:
   draft_core: 0
   dynamic_page_cache: 0
   editor: 0
+  elasticsearch_connector: 0
   entity: 0
   entity_reference_revisions: 0
   fences: 0
