#93 : drupal core config update

--- a/config/default/core.entity_form_display.user.user.default.yml
+++ b/config/default/core.entity_form_display.user.user.default.yml
@@ -22,9 +22,20 @@ content:
   contact:
     weight: 5
     region: content
+  google_analytics:
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   language:
     weight: 0
     region: content
+  path:
+    type: path
+    weight: 30
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   timezone:
     weight: 6
     region: content
