--- a/config/default/core.entity_view_display.commerce_order.default.default.yml
+++ b/config/default/core.entity_view_display.commerce_order.default.default.yml
@@ -102,6 +102,7 @@ content:
 hidden:
   billing_profile: true
   order_number: true
+  search_api_excerpt: true
   shipments: true
   store_id: true
   total_paid: true
