--- a/config/default/core.entity_view_display.commerce_product_variation.default.cart.yml
+++ b/config/default/core.entity_view_display.commerce_product_variation.default.cart.yml
@@ -24,6 +24,7 @@ hidden:
   langcode: true
   list_price: true
   price: true
+  search_api_excerpt: true
   sku: true
   title: true
   weight: true
