--- a/config/default/core.entity_form_display.commerce_order.default.default.yml
+++ b/config/default/core.entity_form_display.commerce_order.default.default.yml
@@ -34,6 +34,16 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
+  coupons:
+    type: entity_reference_autocomplete
+    weight: 5
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   order_items:
     type: inline_entity_form_complex
     weight: 1
