--- a/config/default/core.entity_view_display.commerce_product_variation.default.summary.yml
+++ b/config/default/core.entity_view_display.commerce_product_variation.default.summary.yml
@@ -32,6 +32,7 @@ hidden:
   langcode: true
   list_price: true
   product_id: true
+  search_api_excerpt: true
   sku: true
   title: true
   weight: true
