--- a/config/default/core.entity_view_display.commerce_store.online.default.yml
+++ b/config/default/core.entity_view_display.commerce_store.online.default.yml
@@ -29,6 +29,7 @@ hidden:
   mail: true
   name: true
   prices_include_tax: true
+  search_api_excerpt: true
   shipping_countries: true
   tax_registrations: true
   timezone: true
