--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,20 +1,30 @@
-includes:
-  - vendor/phpstan/phpstan-phpunit/extension.neon
-  - vendor/mglaman/phpstan-drupal/extension.neon
-  - vendor/phpstan/phpstan-deprecation-rules/rules.neon
-
 parameters:
   level: 5
   paths:
-      - docroot/modules/custom
+    - %currentWorkingDirectory%/docroot/modules/custom
+  bootstrapFiles:
+    - %currentWorkingDirectory%/vendor/mglaman/phpstan-drupal/drupal-autoloader.php
   drupal:
-      drupal_root: %currentWorkingDirectory%/docroot
+    drupal_root: %currentWorkingDirectory%/docroot
   excludePaths:
     - */GraphQL*
     - */tests/*
-  ignoreErrors:
-    - '#Plugin manager has cache backend specified but does not declare cache tags.#' # See - https://github.com/mglaman/phpstan-drupal/issues/112#issue-557001157
-    - '#Unsafe usage of new static\(\)#' # See - https://github.com/mglaman/drupal-check/pull/187
-    - '#Class PHPUnit\Framework\TestCase not found#'
-    - '#Reflection error: PHPUnit\Framework\TestCase not found#'
   reportUnmatchedIgnoredErrors: false
+  ignoreErrors:
+    # @see https://github.com/mglaman/phpstan-drupal/issues/112#issue-557001157
+    - '#Plugin manager has cache backend specified but does not declare cache tags.#'
+
+    # new static() is a best practice in Drupal, so we cannot fix that.
+    # @see https://www.drupal.org/docs/develop/development-tools/phpstan/handling-unsafe-usage-of-new-static
+    - "#^Unsafe usage of new static#"
+
+    # Ignore PHPUnit errors.
+    - '#Class PHPUnit\\Framework\\TestCase not found#'
+    - '#Reflection error: PHPUnit\\Framework\\TestCase not found#'
+
+includes:
+  - %currentWorkingDirectory%/vendor/phpstan/phpstan-phpunit/extension.neon
+  - %currentWorkingDirectory%/vendor/mglaman/phpstan-drupal/extension.neon
+  - %currentWorkingDirectory%/vendor/phpstan/phpstan-deprecation-rules/rules.neon
+
+
