#92 : custom modules D10 compatibility fix

--- a/docroot/modules/custom/draft_core/draft_core.info.yml
+++ b/docroot/modules/custom/draft_core/draft_core.info.yml
@@ -1,4 +1,4 @@
 name: Draft core
 type: module
 description: 'Draft core features'
-core_version_requirement: ^9
+core_version_requirement: ^9 || ^10
