--- a/docroot/modules/custom/draft_content/draft_content.info.yml
+++ b/docroot/modules/custom/draft_content/draft_content.info.yml
@@ -1,7 +1,7 @@
 name: Draft commerce content
 type: module
 description: 'Creates demo content'
-core_version_requirement: ^9
+core_version_requirement: ^9 || ^10
 dependencies:
   - commerce:commerce_store
   - commerce:commerce_product
