--- a/config/default/elasticsearch_connector.cluster.test_clustr.yml
+++ b/config/default/elasticsearch_connector.cluster.test_clustr.yml
@@ -7,13 +7,13 @@ name: 'Test clustr'
 url: 'http://commerce-draft.docksal:9200'
 options:
   multiple_nodes_connection: false
-  use_authentication: 0
+  use_authentication: false
   authentication_type: Basic
   username: ''
   password: ''
-  timeout: '3'
+  timeout: 3
   rewrite:
-    rewrite_index: 0
+    rewrite_index: false
     index:
       prefix: ''
       suffix: ''
