--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -18,8 +18,7 @@ module:
   block_content: 0
   breakpoint: 0
   checklistapi: 0
-  ckeditor: 0
-  color: 0
+  ckeditor5: 0
   comment: 0
   commerce: 0
   commerce_cart: 0
@@ -62,6 +61,8 @@ module:
   inline_entity_form: 0
   jquery_ui: 0
   jquery_ui_accordion: 0
+  jquery_ui_autocomplete: 0
+  jquery_ui_menu: 0
   language: 0
   layout_builder: 0
   layout_builder_modal: 0
@@ -85,7 +86,6 @@ module:
   path_alias: 0
   physical: 0
   profile: 0
-  quickedit: 0
   rdf: 0
   redirect: 0
   redirect_404: 0
@@ -116,8 +116,6 @@ module:
   views: 10
   minimal: 1000
 theme:
-  bartik: 0
-  seven: 0
   claro: 0
   olivero: 0
   gin: 0
