--- a/config/default/advagg.settings.yml
+++ b/config/default/advagg.settings.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: Vi3b7DLLNw5X1UX9XG8mnU-ysvyNgdyvAasxV9yck3I
 css:
   brotli: true
-  combine_media: true
+  combine_media: null
   fix_type: true
   preserve_external: false
 dns_prefetch: false
