--- a/config/default/search_api.index.products.yml
+++ b/config/default/search_api.index.products.yml
@@ -50,7 +50,9 @@ third_party_settings:
     multilingual:
       limit_to_content_language: false
       include_language_independent: true
+      use_language_undefined_as_fallback_language: false
       specific_languages: {  }
+      use_universal_collation: false
 id: products
 name: Products
 description: ''
