--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "prefer-stable": true,
     "require-dev": {
         "drupal/coder": "^8.3",
-        "drupal/drupal-extension": "^4",
-        "drupal/stage_file_proxy": "^1.0@beta",
+        "drupal/drupal-extension": "^5",
+        "drupal/stage_file_proxy": "^2.0",
         "lemberg/draft-environment": "^3.5.0",
         "mglaman/phpstan-drupal": "^1.1",
         "phpspec/prophecy-phpunit": "^2",
@@ -21,12 +21,12 @@
         "composer/installers": "^2.1",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.0",
-        "drupal/advagg": "^5.0",
+        "drupal/advagg": "^6.0",
         "drupal/checklistapi": "^2.1",
         "drupal/commerce": "^2.21",
         "drupal/commerce_paypal": "^1.0@RC",
         "drupal/commerce_pricelist": "^2.1",
-        "drupal/commerce_shipping": "^2.0@RC",
+        "drupal/commerce_shipping": "^2.x-dev",
         "drupal/core-composer-scaffold": "^9.5",
         "drupal/core-project-message": "^9.5",
         "drupal/core-recommended": "^9.5",
@@ -38,20 +38,19 @@
         "drupal/google_analytics": "^4.0",
         "drupal/google_tag": "^1.5",
         "drupal/hreflang": "^1.9",
-        "drupal/jquery_ui_accordion": "^1.1",
-        "drupal/layout_builder_browser": "^1.4",
+        "drupal/jquery_ui_accordion": "^2.0",
         "drupal/layout_builder_modal": "^1.1",
         "drupal/layout_builder_restrictions": "^2.12",
         "drupal/menu_item_extras": "^2.16",
         "drupal/metatag": "^1.22",
-        "drupal/module_filter": "^3.2",
+        "drupal/module_filter": "^4.0",
         "drupal/pathauto": "^1.11",
         "drupal/price_difference_formatter": "^1.2",
+        "drupal/rdf": "^2.1",
         "drupal/redirect": "^1.8",
         "drupal/robotstxt": "^1.4",
         "drupal/search_api": "^1.26",
         "drupal/search_api_solr": "^4.2",
-        "drupal/seo_checklist": "^5.1",
         "drupal/simple_sitemap": "^4.1",
         "drupal/xmlsitemap": "^1.4",
         "drupal/yoast_seo": "^1.7",
